--- a/Client/angular.json
+++ b/Client/angular.json
@@ -25,14 +25,15 @@
               }
             ],
             "styles": [
-              "src/styles.css",
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
               "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "./node_modules/ngx-toastr/toastr.css",
               "./node_modules/ngx-spinner/animations/ball-scale-multiple.css",
-              "./node_modules/ngx-spinner/animations/line-scale.css"
+              "./node_modules/ngx-spinner/animations/line-scale.css",
+              "src/styles.css"
             ],
             "scripts": [
               "./node_modules/@popperjs/core/dist/umd/popper.js",
