--- a/Client/package.json
+++ b/Client/package.json
@@ -37,6 +37,7 @@
     "@ngx-translate/http-loader": "^16.0.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "express": "^5.1.0",
     "ngx-owl-carousel-o": "^20.0.1",
     "ngx-spinner": "^19.0.0",
