Add interfaces and repositories for entities, generic and unitOfWork
there are interfaces for entities, generic and unitOfWork but no repositories for entities before answering these two questions:
Do we create separate Irepo for each entity or just use igeneric repo?(forces changes in unitofwork)?
Do we inject Igeneric/Irepo in unitofwork or use new Irepo instead?(inject then use builder design)

--- a/Backend/SalahlyApp/SalahlyProject/SalahlyProject.csproj
+++ b/Backend/SalahlyApp/SalahlyProject/SalahlyProject.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Salahly.DAL\Salahly.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
