Add DbContext and migration
First migration with data seeding write your database server name and make it in git ignore

--- a/Backend/SalahlyApp/SalahlyProject/appsettings.json
+++ b/Backend/SalahlyApp/SalahlyProject/appsettings.json
@@ -1,9 +1,19 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=SalahlyDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "your-super-secret-jwt-key-must-be-at-least-32-characters-long",
+    "Issuer": "SalahlyAPI",
+    "Audience": "SalahlyClient",
+    "ExpiryMinutes": 60
+  }
 }
