Add service Layer
add 3 folders:
DTOs (Adding Mapster configuration)
Interface
service

--- a/Backend/SalahlyApp/SalahlyProject/SalahlyProject.csproj
+++ b/Backend/SalahlyApp/SalahlyProject/SalahlyProject.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Salahly.DAL\Salahly.DAL.csproj" />
+    <ProjectReference Include="..\Salahly.DSL\Salahly.DSL.csproj" />
   </ItemGroup>
 
 </Project>
