Modify the IdentityUser Id to use an integer instead of a string.

--- a/Backend/SalahlyApp/Salahly.DSL/Salahly.DSL.csproj
+++ b/Backend/SalahlyApp/Salahly.DSL/Salahly.DSL.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Salahly.DAL\Salahly.DAL.csproj" />
   </ItemGroup>
 
