--- a/Backend/SalahlyApp/SalahlyProject/appsettings.json
+++ b/Backend/SalahlyApp/SalahlyProject/appsettings.json
@@ -1,19 +1,25 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=SalahlyDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Information"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=.;Database=SalahlyDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    },
+    "JwtSettings": {
+        "Issuer": "MyApp",
+        "Audience": "MyAppClients",
+        "Secret": "super_long_random_secret_here_change_in_production_AtLeast32Chars",
+        "ExpiresMinutes": 60
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "Microsoft.EntityFrameworkCore": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "Jwt": {
+        "Key": "!!ThisISM0th3rRu551@_5@yH3ll0B*tch35",
+        "Issuer": "SalahlyAPI",
+        "Audience": "SalahlyClient",
+        "ExpiryMinutes": 60
     }
-  },
-  "AllowedHosts": "*",
-  "Jwt": {
-    "Key": "your-super-secret-jwt-key-must-be-at-least-32-characters-long",
-    "Issuer": "SalahlyAPI",
-    "Audience": "SalahlyClient",
-    "ExpiryMinutes": 60
-  }
 }
