Add serviceRequest and Customer controllers

--- a/Backend/SalahlyApp/SalahlyProject/appsettings.json
+++ b/Backend/SalahlyApp/SalahlyProject/appsettings.json
@@ -1,25 +1,22 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=.;Database=SalahlyDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-    },
-    "JwtSettings": {
-        "Issuer": "MyApp",
-        "Audience": "MyAppClients",
-        "Secret": "super_long_random_secret_here_change_in_production_AtLeast32Chars",
-        "ExpiresMinutes": 60
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning",
-            "Microsoft.EntityFrameworkCore": "Information"
-        }
-    },
-    "AllowedHosts": "*",
-    "Jwt": {
-        "Key": "!!ThisISM0th3rRu551@_5@yH3ll0B*tch35",
-        "Issuer": "SalahlyAPI",
-        "Audience": "SalahlyClient",
-        "ExpiryMinutes": 60
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=SalahlyDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+
+  "JwtSettings": {
+    "Issuer": "SalahlyAPI",
+    "Audience": "SalahlyClient",
+    "Secret": "!!ThisISM0th3rRu551@_5@yH3ll0B*tch35",
+    "ExpiresMinutes": 60
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
+  },
+
+  "AllowedHosts": "*"
 }
