Add craftsman offer endpoints

--- a/Backend/SalahlyApp/SalahlyProject/appsettings.json
+++ b/Backend/SalahlyApp/SalahlyProject/appsettings.json
@@ -17,7 +17,11 @@
       "Microsoft.EntityFrameworkCore": "Information"
     }
   },
-
+  "Cloudinary": {
+    "CloudName": "dkep2voqw",
+    "ApiKey": "122631279918631",
+    "ApiSecret": "awVM81TOjgQXyvIhAzISrrV1Ufo"
+  },
   "AllowedHosts": "*",
   "AppSettings": {
     "BaseUrl": "https://localhost:5049"
