CHatBot integrated with backend and support reading docs using RAg but with no chat history

--- a/Backend/SalahlyApp/Salahly.DSL/Salahly.DSL.csproj
+++ b/Backend/SalahlyApp/Salahly.DSL/Salahly.DSL.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Salahly.DAL\Salahly.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\ChatDtos\" />
+  </ItemGroup>
+
 </Project>
