--- a/Backend/SalahlyApp/SalahlyProject/appsettings.Development.json
+++ b/Backend/SalahlyApp/SalahlyProject/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Fireworks": {
+    "BaseUrl": "https://api.fireworks.ai/inference/v1",
+    "ApiKey": "fw_3ZbZueFQEaBhpmDWaWdLCNUc",
+    "Model": "accounts/fireworks/models/llama-v3p1-8b-instruct"
   }
 }
