--- a/Client/package.json
+++ b/Client/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.2",
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "@microsoft/signalr": "^10.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "@popperjs/core": "^2.11.8",
