--- a/Backend/SalahlyApp/SalahlyProject/appsettings.json
+++ b/Backend/SalahlyApp/SalahlyProject/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=SalahlyDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=db34437.public.databaseasp.net; Database=db34437; User Id=db34437; Password=gR@3N7i-+zX2; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    },
 
   "JwtSettings": {
     "Issuer": "SalahlyAPI",
