--- a/Client/vercel.json
+++ b/Client/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "ng build --configuration=production --no-prerender",
+  "buildCommand": "ng build --configuration=production",
+  "outputDirectory": "dist/Client/browser",
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
   ]
