--- a/Client/vercel.json
+++ b/Client/vercel.json
@@ -1,6 +1,5 @@
 {
-  "buildCommand": "ng build --configuration=production",
-  "outputDirectory": "dist/Client/browser",
+  "buildCommand": "ng build --configuration=production --no-prerender",
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
   ]
