--- a/Client/package.json
+++ b/Client/package.json
@@ -23,6 +23,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^20.3.13",
     "@angular/animations": "^20.3.9",
     "@angular/common": "^20.2.0",
     "@angular/compiler": "^20.2.0",
