--- a/Client/angular.json
+++ b/Client/angular.json
@@ -24,7 +24,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/_redirects"
             ],
             "styles": [
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
