fix chatbot locally

--- a/Backend/SalahlyApp/SalahlyProject/appsettings.json
+++ b/Backend/SalahlyApp/SalahlyProject/appsettings.json
@@ -32,6 +32,11 @@
     "BaseUrl": "https://accept.paymob.com/api",
     "IsTestMode": true
   },
+  "Fireworks": {
+    "BaseUrl": "https://api.fireworks.ai/inference/v1",
+    "ApiKey": "fw_3ZbZueFQEaBhpmDWaWdLCNUc",
+    "Model": "accounts/fireworks/models/llama4-maverick-instruct-basic"
+  },
 
   "AllowedHosts": "*",
   "AppSettings": {
