--- a/Backend/SalahlyApp/SalahlyProject/appsettings.json
+++ b/Backend/SalahlyApp/SalahlyProject/appsettings.json
@@ -1,7 +1,9 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=db34437.public.databaseasp.net; Database=db34437; User Id=db34437; Password=gR@3N7i-+zX2; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db35536.public.databaseasp.net; Database=db35536; User Id=db35536; Password=Ws4@g-D3Ky6%; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    //"DefaultConnection": "Server=.;Database=SalahlyDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+
+  },
 
   "JwtSettings": {
     "Issuer": "SalahlyAPI",
